# city17

./: .funcignore  .gitignore  .hgignore  Cargo.toml  README.md  build.sh  host.json  local.settings.json  update.sh
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
