[package]
name = "city17"
version = "0.5.0"
authors = ["Malloc Voidstar <1284317+AlyoshaVasilieva@users.noreply.github.com>"]
edition = "2018"
resolver = "2"
license = "GPL-3.0-only"

[dependencies]
thiserror = "1.0"
rand = { version = "0.8.3", default-features = false, features = ["std"] }
pcg_rand = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.5.0-rc.1"
once_cell = "1.8"
ureq = { version = "2.1.1", default-features = false, features = ["json", "tls"] }

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["aliyun"] # set default here for build.sh
azure = [] # Haven't tried this since I switched to Aliyun, good luck
aliyun = []
resolve = [] # enable resolve endpoint for showing IPs of domains
